--- a/example.ipynb
+++ b/example.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import AutoSpeechRecord\n",
-    "recoder = AutoSpeechRecord.auto_speech_recorder()"
+    "recoder = AutoSpeechRecord.auto_speech_record()"
    ]
   },
   {
